--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!--Subheader-->
 		<div class="turnExplanation">
 			<p id="goal">Move your L. If you can't move, you lose.</p>
-			<p id="controls">F to flip horizontally, R to rotate clockwise, WASD to move, ENTER to confirm.</p>
+			<p id="controls">F to flip horizontally, R to rotate clockwise, WASD or ARROW KEYS to move, ENTER to confirm.</p>
 		</div>
 
 		<!--Center-->
