--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 
 		<!--JavaScript-->
 		
-		<script src="coins.js"></script>
-		<script src="lPiece.js"></script>
-		<script src="display.js"></script>
-		<script src="main.js"></script>
+		<script src="scripts/Checks.js"></script>
+		<script src="scripts/Board.js"></script>
+		<script src="scripts/Coins.js"></script>
+		<script src="scripts/LPiece.js"></script>
+		<script src="scripts/Display.js"></script>
+		<script src="scripts/Main.js"></script>
 
 
 	</body>
